--- a/wp-content/themes/thinkingstudents/style.css
+++ b/wp-content/themes/thinkingstudents/style.css
@@ -119,3 +119,33 @@ article.post p.post-info a {
 article.post p.post-content {
 	margin-top: -5px;
 }
+article.post blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: -10px 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+article.post blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+article.post blockquote p {
+  display: inline;
+  font-style: italic;
+  font-family: 'Times New Roman', Times;
+}
+article.post .wp-post-image {
+//	float: left;
+}
+article.post image {
+	max-width: 100%;
+}
+.thumbnail {
+	float: left;
+	margin-right: 10px;
+}
