--- a/wp-content/themes/thinkingstudents/style.css
+++ b/wp-content/themes/thinkingstudents/style.css
@@ -149,3 +149,67 @@ article.post image {
 	float: left;
 	margin-right: 10px;
 }
+
+
+#search {
+	float: right;
+}
+#search #searchsubmit {
+	background-color: #006EC3;
+	color: #fff;
+	padding: 5px 14px;
+	border: none;
+}
+#search #s {
+	vertical-align: top;
+	padding: 3px 0;
+}
+
+/* Sidebar widget */
+div.sidebar {
+	float: right;
+	width: 25%;
+	font-size: 90%;
+	padding: 10px;
+	border-radius: 5px;
+	margin-top: 50px;
+	margin-right: -250px;
+}
+div.sidebar h2 {
+	background: #222;
+	background: -moz-linear-gradient(#525252, #383838);
+	background: -o-linear-gradient(#525252, #383838);
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#525252), to(#383838));
+	background: -webkit-linear-gradient(#3498DB, #006EC3);
+	-webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
+	-moz-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
+	clear: both;
+	display: block;
+	margin: 0px 0px 20px 0px;
+	width: 100%;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	font-family: 'Open Sans',Arial,sans-serif width: 1266px;
+	height: 25px;
+	padding-top: 7px;
+	padding-left: 10px;
+	font-size: 16px;
+	color: #f0f0f0;
+}
+div.sidebar ul {
+	margin-top: -10px;
+	margin-left: -25px;
+}
+div.sidebar li {
+	list-style: none;
+}
+div.sidebar li a {
+	text-decoration: none;
+	color: #006ec3;
+	
+}
+div.sidebar li a:visited {
+	color: #4B9CAE;
+}
